compiler/tools/fpp-check/test/tlm_packets/instance_not_defined.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/tlm_packets/instance_not_defined.fpp:6.7
      u.T
      ^
error: symbol u is not defined
note: looking for a port interface instance here
